# stockwatch

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py
.github/workflows/: deploy.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  db.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: stocks.py
backend/app/core/: config.py
backend/app/schemas/: stock.py
backend/app/services/: inference_service.py  stock_service.py
backend/prediction/: __main__.py  config.py  worker.py
backend/tests/: test_stocks.py
backfill/: __main__.py  config.py  service.py
db/: schema.sql
docs/: StockWatch design.excalidraw
feature_eng/: __main__.py  config.py  indicators.py  worker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
ingestion/: __init__.py  __main__.py  config.py
ingestion/feature_eng/: __main__.py  config.py  (+2 more)
llm_analyzer/: __main__.py  config.py  worker.py
models/: xgb_1d.json  xgb_1h.json  xgb_1m.json  xgb_1w.json  xgb_2w.json  xgb_4h.json
paper_trader/: __main__.py  config.py  engine.py  portfolio.py
prediction/: __main__.py  config.py  worker.py
reconciliation/: __main__.py  config.py  service.py
scripts/: add_rss_feeds.py  alpaca_news.py  backfill_new_horizons.py  finviz_scrape.py  migrate_time_features.py  rss_ingestion.py  test_xgb.py
shared/: alpaca.py  logging.py  queue.py  settings.py
training/: __main__.py  config.py  trainer.py
(+41 files in other folders)
